# python-app-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pythonapp-workflow.yml
requirements/: requirements-dev.txt  requirements.txt
src/hello_world/: app.py
src/hello_world/util/: date.py  logs.py
src/python_app/: app.py
src/python_app/util/: date.py  logs.py
src/pythonapp/: app.py
src/pythonapp/util/: logs.py
tests/hello_world/: test_app.py
tests/hello_world/unit/util/: test_date.py
tests/python_app/: test_app.py
tests/python_app/unit/util/: test_date.py  test_logs.py
tests/pythonapp/unit/util/: test_date.py  test_logs.py
