[project]
name = 'python-app'
description = 'Python application template for personal use'
license = {text = 'MIT License'}
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ['version']

dependencies = [
    'structlog',
    'toml'
]

[project.optional-dependencies]
dev = [
    'coverage',
    'freezegun',
    'mypy',
    'pre-commit',
    'pytest',
    'ruff',
    'types-toml',
]

[project.entry-points.'console_scripts']
python_app = 'python_app.app:main'

[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools', 'wheel']

[tools.setuptools]
packages = ['python_app']

[tool.python_app]
# to write json-formatted logs to disk, uncomment the following line specify the file location
# log_file = '/Users/becky/logs/python_app.log'

[tool.ruff]
line-length = 120
lint.extend-select = ['I', 'Q']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'

[tool.setuptools.dynamic]
version = {attr = 'python_app.__version__'}
